[gd_scene load_steps=8 format=2]

[ext_resource path="res://game/main/main.gd" type="Script" id=1]
[ext_resource path="res://menus/pause_menu/pause_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://menus/game_over_menu/game_over_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/gui/gui.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/player/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/npc_respawn/npc_respawn.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/wall/wall.tscn" type="PackedScene" id=7]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="gui_canvas" type="CanvasLayer" parent="."]

[node name="pause_menu" parent="gui_canvas" instance=ExtResource( 2 )]
visible = false

[node name="game_over_menu" parent="gui_canvas" instance=ExtResource( 3 )]
visible = false

[node name="gui" parent="gui_canvas" instance=ExtResource( 4 )]
rect_scale = Vector2( 1.00128, 1 )
seconds_remaining = 90

[node name="player" parent="." instance=ExtResource( 5 )]
position = Vector2( 977.294, 554.154 )

[node name="npc_respawn" parent="." instance=ExtResource( 6 )]
cooldown_time = 1.5

[node name="walls" type="Node2D" parent="."]

[node name="left_wall" parent="walls" instance=ExtResource( 7 )]
position = Vector2( -25.2352, 400.159 )

[node name="right_wall" parent="walls" instance=ExtResource( 7 )]
position = Vector2( 1950, 400.159 )

[node name="top_wall" parent="walls" instance=ExtResource( 7 )]
position = Vector2( 991.06, -28.8407 )
rotation = 1.5708

[node name="bottom_wall" parent="walls" instance=ExtResource( 7 )]
position = Vector2( 983.85, 1110.35 )
rotation = 1.5708

[connection signal="game_over" from="." to="." method="_on_main_game_over"]
[connection signal="timeout" from="gui_canvas/gui" to="." method="_on_gui_timeout"]
[connection signal="dead" from="player" to="." method="_on_player_dead"]
[connection signal="hp_updated" from="player" to="gui_canvas/gui" method="_on_player_hp_updated"]
